--- a/Practice/index.html
+++ b/Practice/index.html
@@ -3,42 +3,66 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"> -->
+    <title>CV Raul Contreras</title>
   </head>
   <body>
+    <div class="div1">
+      <h2 id="name">Raul Contreras</h2>
+      <h3 id="title">Web Design Portfolio</h3>
+    </div>
+
+<!-- //favicon -->
+
     <div class="container">
-      <div class="navbar">
-        <div class="logo">
-          <img src="images/logo.png" class="logo" alt="">
-
-        </div>
-        <div class="links">
-          <a href="#">About</a>
-          <a href="#">Work</a>
-          <a href="#">Notes</a>
-
-        </div>
-
-      </div>
-      <div class="">
-        <img src="images/cloud2.png"class="img1" alt="">
+      <ul class="flex-container">
+  <li class="flex-item1">Coding</li>
+  <li class="flex-item2">Design</li>
+  <li class="flex-item3">Work</li>
+  <li class="flex-item4">Plan</li>
+  <li class="flex-item5">Action</li>
+  <li class="flex-item6">Social</li>
+</ul>
 
 
-      </div>
-      <div class="textarea">
-        <h1>I'm Raul</h1>
-        <h3>Web Developer</h3>
-
-        <img src="images/cloud2.png" class="img2" alt="">
-
-      </div>
-      <div class="">
+          <!-- <h1 class="animated infinite bounce delay-2s">Hola, me animo?</h1> -->
 
       </div>
 
 
 
+<br><br><br>
+<div class="outer">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue tortor eget pulvinar lobortis.
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam ac dolor augue.
+    Pellentesque mi mi, laoreet et dolor sit amet, ultrices varius risus. Nam vitae iaculis elit.
+    Aliquam mollis interdum libero. Sed sodales placerat egestas. Vestibulum ut arcu aliquam purus viverra dictum vel sit amet mi.
+    Duis nisl mauris, aliquam sit amet luctus eget, dapibus in enim. Sed velit augue, pretium a sem aliquam, congue porttitor tortor.
+    Sed tempor nisl a lorem consequat, id maximus erat aliquet. Sed sagittis porta libero sed condimentum.
+    Aliquam finibus lectus nec ante congue rutrum. Curabitur quam quam, accumsan id ultrices ultrices, tempor et tellus.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue tortor eget pulvinar lobortis.
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam ac dolor augue.
+    Pellentesque mi mi, laoreet et dolor sit amet, ultrices varius risus. Nam vitae iaculis elit.
+    Aliquam mollis interdum libero. Sed sodales placerat egestas. Vestibulum ut arcu aliquam purus viverra dictum vel sit amet mi.
+    Duis nisl mauris, aliquam sit amet luctus eget, dapibus in enim. Sed velit augue, pretium a sem aliquam, congue porttitor tortor.
+    Sed tempor nisl a lorem consequat, id maximus erat aliquet. Sed sagittis porta libero sed condimentum.
+    Aliquam finibus lectus nec ante congue rutrum. Curabitur quam quam, accumsan id ultrices ultrices, tempor et tellus.
+  </p>
+  <div class="box" id="one"></div>
+</div>
 
+
+
+    <br>
+    <div class="footer">
+      <a href="#">PORTFOLIO</a>
+      <a href="#">ABOUT</a>
+      <a href="#">CONTACT</a>
+      <a href="#">BLOG</a>
+      <a href="#">BOOK ONLINE</a>
     </div>
 
 
